--- a/config/database.yaml
+++ b/config/database.yaml
@@ -7,5 +7,11 @@ test:
   database: db/quotes_test.sqlite.db
 
 production:
-  adapter: sqlite3
-  database: db/quotes_live.sqlite.db
+  adapter: mysql2
+  encoding: utf8
+  pool: 5
+  timeout: 5000
+  database: technical_analysis
+  username: ta
+  password: H2S-Wr-m
+  host: localhost
